'Thomy | fix overflow'

--- a/we-learn-front/slide/style.scss
+++ b/we-learn-front/slide/style.scss
@@ -7,6 +7,7 @@
 body {
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
   background: #000;
+  overflow: hidden;
 }
 
 $numOfParts: 4;
